--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+  <script type="module" crossorigin src="/assets/index.c9d44889.js"></script>
+  <link rel="stylesheet" href="/assets/index.128bee23.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
 </body>
 
 </html>
